<resources>
    <string name="app_name">TopRe$ale</string>
    <string name="usuario">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="repitePassword">Repite la Contraseña:</string>
    <string name="nombre">Nombre Completo:</string>
    <string name="correo">Correo electronico:</string>
    <string name="login">Iniciar Sesion</string>
    <string name="register">Registrarse</string>
    <string name="terminosHeader">Terminos y Condiciones de Usuario</string>
    <string name="loading">Cargando datos y recursos de la aplicacion...</string>
    <string name="ordenacion">Ordenado por: </string>
    <string name="ordenadoTopTrending">Top Trending </string>

    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="ayuda">Ayuda</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="configuracion">Configuracion</string>
    <string name="aceptar">Aceptar</string>
    <string name="valorar">Valorar este producto:</string>
    <string name="clickE">Haz click para valorar:</string>
    <string name="op_hint">Escribe tu opinion del producto</string>
    <string name="clickO">OPINAR</string>


    <string name="terminosText">Bienvenido a nuestra aplicación de búsqueda de productos al por mayor. Antes de utilizar nuestros servicios, lea detenidamente los siguientes términos y condiciones.Al acceder o utilizar nuestra aplicación, acepta estar legalmente vinculado por estos términos y condiciones.Si no está de acuerdo con estos términos y condiciones, no utilice nuestra aplicación.
\n<b><i>Propósito de la aplicación:</i></b>
Nuestra aplicación tiene como objetivo proporcionar a nuestros usuarios una plataforma fácil de usar para encontrar productos al por mayor de una variedad de empresas vendedoras. No vendemos productos directamente, pero ofrecemos un servicio de búsqueda para facilitar la conexión entre compradores y vendedores.
\n<b><i>Información del usuario:</i></b>
Para utilizar nuestra aplicación, es posible que necesite registrarse y proporcionar información personal como su nombre, dirección de correo electrónico, número de teléfono y otra información relevante. Nos comprometemos a mantener esta información segura y protegida de acuerdo con nuestra Política de Privacidad.
\n<b><i>Precios y productos:</i></b>
Nos esforzamos por proporcionar información precisa y actualizada sobre los precios y productos disponibles en nuestra aplicación, pero no garantizamos que la información sea precisa y completa. Los precios y la disponibilidad pueden cambiar sin previo aviso. No somos responsables de los productos vendidos por los vendedores a través de nuestra aplicación. El comprador es responsable de verificar la calidad y las características de los productos antes de realizar una compra.
\n<b><i> Responsabilidad del usuario:</i></b>
Al utilizar nuestra aplicación, usted se compromete a utilizar nuestros servicios solo con fines legales y de acuerdo con estos términos y condiciones. Usted es responsable de cualquier actividad que realice en nuestra aplicación y se compromete a no utilizar nuestra aplicación para fines ilegales o fraudulentos.
\n<b><i>Propiedad intelectual:</i></b>
Todo el contenido, incluidos los textos, gráficos, imágenes, videos, logotipos y marcas comerciales, en nuestra aplicación son propiedad exclusiva de nuestra empresa o de nuestros proveedores. Usted no puede utilizar el contenido de nuestra aplicación sin nuestro permiso previo por escrito.
\n<b><i>Modificaciones:</i></b>
Nos reservamos el derecho de modificar o cambiar estos términos y condiciones en cualquier momento sin previo aviso. Los cambios se harán efectivos inmediatamente después de su publicación. Es su responsabilidad revisar regularmente estos términos y condiciones para estar al tanto de cualquier cambio.
\n<b><i>Terminación:</i></b>
Nos reservamos el derecho de suspender o terminar su acceso a nuestra aplicación en cualquier momento y sin previo aviso si viola estos términos y condiciones.
\n<b><i>Ley aplicable:</i></b>
Estos términos y condiciones se rigen por las leyes de [país] y cualquier disputa que surja en relación con estos términos y condiciones se resolverá exclusivamente en los tribunales de [ciudad/país].
\nSi tiene alguna pregunta o inquietud sobre estos términos y condiciones, contáctenos a través de nuestra página de contacto en la aplicación. Gracias por utilizar nuestra aplicación de búsqueda de productos al por mayor.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="ayudaText">
\n<b><i>1. ¿Cómo puedo buscar productos en la aplicación?</i></b>
En la pantalla de inicio, deberías ver una barra de búsqueda. Puedes escribir el nombre del producto que estás buscando en ella y presionar el botón de búsqueda para encontrar los resultados relevantes. También puedes utilizar los filtros para refinar tu búsqueda por distintas categorías.
\n<b><i>2. ¿Cómo puedo realizar una compra?</i></b>
Después de encontrar un producto que te interese, deberías ver un botón "Comprar". Haz clic en él y sigue las instrucciones para completar el proceso de compra. Asegúrate de revisar y confirmar los detalles de la orden antes de realizar el pago.
\n<b><i>3. ¿Cómo puedo garantizar que los productos que estoy comprando sean de calidad?</i></b>
Siempre es recomendable revisar la descripción del producto y las opiniones de otros compradores antes de realizar una compra. Además, algunos vendedores pueden ofrecer garantías o devoluciones de dinero en caso de que no estés satisfecho con el producto recibido. También puedes comunicarte directamente con el vendedor para obtener más información sobre el producto y su calidad antes de realizar la compra. En general, es importante investigar y tomar medidas para asegurarte de que estás comprando productos de calidad en la aplicación.
\n<b><i>4. ¿Cómo puedo cambiar mis datos personales?</i></b>
En la página de perfil, deberías ver un botón "Configurar". Haz clic en él para actualizar tu información personal, como tu nombre, dirección de correo electrónico, número de teléfono, etc.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    \n
</resources>